# MINICRM

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py
src/api/: dependencies.py
src/api/routers/: __init__.py  contacts.py  leads.py  operators.py  sources.py
src/crud/: __init__.py  base.py  contact.py  lead.py  operator.py  source.py
src/models/: __init__.py  base.py  contact.py  lead.py  operator.py  source.py
src/schemas/: contact.py  lead.py  operator.py  source.py
src/services/: __init__.py  distribution.py
src/tests/: conftest.py  test_contacts.py  test_distribution.py  test_integration.py  test_leads.py  test_operators.py  test_sources.py
