[project]
name = "venv"
version = "0.1.0"
description = "MINICRM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
